SERVER-34508 Prevent race condition in Migration Destination Manager from swallowing an exception